# DeltaRuntime

./: ReadMe.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ProfileManager.css  ProfileManager.old.tsx  ProfileManager.tsx  ProfileSidebar.css  ProfileSidebar.tsx  StepCreateStructure.tsx  StepSelectBase.tsx  StepValidateDrive.tsx  VirtualFileTree.css  VirtualFileTree.tsx  Wizard.css  Wizard.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: blob_cache.rs  commands.rs  lib.rs  logging.rs  long_path.rs  main.rs  path_utils.rs  profiles.rs  runtime_builder.rs  runtime_planner.rs  settings.rs  virtual_fs.rs  workspace_watcher.rs
