[package]
name = "deltaruntime"
version = "0.1.0"
description = "DeltaRuntime - Profile-based runtime manager for moddable games"
authors = ["DeltaRuntime Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "deltaruntime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }

# Core dependencies for runtime management
blake3 = "1.5"
rayon = "1.10"
notify = "8.0"
anyhow = "1.0"
thiserror = "1.0"

# Windows-specific APIs
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem", 
    "Win32_System_IO",
    "Win32_System_SystemServices",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_Security",
] }

# Additional useful dependencies  
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
tempfile = "3.0"
crossbeam-channel = "0.5"
